# stm32f103-cmake-template

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  build.sh  docker-build.sh  flash.sh
.circleci/: config.yml
source/: CMakeLists.txt
source/cmake/: TOOLCHAIN_arm_none_eabi_cortex_m3.cmake  freertos.cmake  libopencm3.cmake  stdperiph.cmake  stdperiph_lib.cmake  stm32_dimtass_lib.cmake  stm32_usb_fs_driver.cmake
source/config/: STM32F103C8Tx.cfg  STM32F103C8Tx.xml
source/src_freertos/: CMakeLists.txt  _main.c  main.c  opencm3.c  tiny_printf.c
source/src_stdperiph/: CMakeLists.txt  main.c  main.c.led1  stm32f10x_it.c  syscalls.c
source/src_stdperiph/inc/: platform_config.h  stm32f10x_it.h
